Add config flag in the command line to specify the config file location

--- a/jobs/nfsbroker/templates/ctl.erb
+++ b/jobs/nfsbroker/templates/ctl.erb
@@ -42,6 +42,7 @@ case $1 in
       --dbHostname="<%= p("nfsbroker.dbHostname") %>" \
       --dbPort="<%= p("nfsbroker.dbPort") %>" \
       --dbName="<%= p("nfsbroker.dbName") %>" \
+      --config="<%= p("nfsbroker.config") %>" \
       2> >(tee -a $LOG_DIR/nfsbroker.stderr.log | logger -p user.error -t vcap.nfsbroker) \
       1> >(tee -a $LOG_DIR/nfsbroker.stdout.log | logger -p user.info -t vcap.nfsbroker)
 
